[ticket/12011] Correctly align the posting options.
PHPBB3-12011

--- a/phpBB/styles/prosilver/theme/bidi.css
+++ b/phpBB/styles/prosilver/theme/bidi.css
@@ -716,7 +716,7 @@ ul.linklist li.small-icon > a, ul.linklist li.breadcrumbs span:first-child > a {
 }
 
 .rtl fieldset.fields1 dd {
-	margin-right: 10em;
+	margin-right: 15em;
 	margin-left: 0;
 	border-right-width: 0;
 	border-left-width: 1px;
